--- a/teste.html
+++ b/teste.html
@@ -9,6 +9,12 @@
         <input teste="a1">
         <input teste="a2">
         <input teste="aw">
+        <input type="checkbox">
+        <button onclick=""></button>
+        <button type="submit">Submit</button>
+        <button type="menu">Submit</button>
+        <button type="reset">Submit</button>
+        <button type="submit">Submit</button>
 
 </body>
 </html>
